--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: HSTLES # Your GitHub organization or username, where this repository live
 repo: status.hstles.com # The name of this repository
 
 sites:
-  - name: Google
+  - name: HSTLES
     url: https://hstles.com
 
 
