--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: HSTLES # Your GitHub organization or username, where this repository live
 repo: status.hstles.com # The name of this repository
 
 sites:
-  - name: HSTLES
+  - name: HSTLES Website
     url: https://hstles.com
 
 
@@ -12,14 +12,14 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   baseUrl: /status.hstles.com
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  # name: Upptime
+  name: HSTLES Services Status
   # introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   # introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
-  # navbar:
+  navbar:
     # - title: Status
-      # href: /
-    # - title: GitHub
-      # href: https://github.com/$OWNER/$REPO
+    #   href: /
+    - title: GitHub
+      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
