--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  baseUrl: /status.hstles.com
+  cname: status.hstles.com
+  # baseUrl: /status.hstles.com
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: HSTLES Services Status
   # introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
